[package]
name = "rust-minibrowser"
version = "0.1.0"
authors = ["josh marinacci <joshua@marinacci.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raqote = "0.7.10"
font-kit = "0.5.0"
minifb = "0.15.3"
serde_json = "1.0"
pom = "3.1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
image = "0.23.0"
url = "2.1.1"
lazy_static = "1.4.0"
cgmath = "0.17"
spin_sleep = "0.3"
glium = {version = "0.26.0" }
glium-glyph = "0.7.0"
